# GAMES102Study

./: .gitignore  README.md
src/: 初始hwX备份.rar
src/hw1/: main.cpp
src/hw1/Components/details/: CanvasData_AutoRefl.inl
src/hw1/Systems/: CanvasSystem.cpp
src/hw3/: main.cpp
src/hw3/Systems/: CanvasSystem.cpp
src/初始hwX备份/hw1/: main.cpp
刘利刚的课程作业/: README.md
刘利刚的课程作业/HW6——实现极小曲面的局部法/优秀代码/向宇骋/: DenoiseSystem.cpp
刘利刚的课程作业/HW7——实现极小曲面的全局方法、实现曲面参数化/优秀代码/马玺凯/: CMakeLists.txt  main.cpp  项目信息.md
刘利刚的课程作业/hw10——重建算法/优秀代码/GuoqingZhang/: 代码链接.txt
刘利刚的课程作业/hw10——重建算法/优秀代码/venitable/: 重要说明.md
刘利刚的课程作业/hw10——重建算法/优秀报告/谢聪/: hw10.md
刘利刚的课程作业/hw1——拟合平面散点/: GAMES102HW1作业总结.pptx
刘利刚的课程作业/hw1——拟合平面散点/优秀代码/杨雪源/project/src/hw1/Components/details/: CanvasData_AutoRefl.inl
刘利刚的课程作业/hw1——拟合平面散点/优秀代码/陈昱文/src/: main.cpp
刘利刚的课程作业/hw2——神经网络函数拟合数据/优秀代码/武云潇/assets/materials/: white.mat
刘利刚的课程作业/hw2——神经网络函数拟合数据/优秀代码/武云潇/assets/materials/skybox/: skyLake.mat  skyLoft.mat
刘利刚的课程作业/hw2——神经网络函数拟合数据/优秀代码/武云潇/src/hw1/Components/details/: CanvasData_AutoRefl.inl
刘利刚的课程作业/hw2——神经网络函数拟合数据/优秀代码/武云潇/src/hw2/Components/details/: CanvasData_AutoRefl.inl
刘利刚的课程作业/hw2——神经网络函数拟合数据/优秀代码/陈昱文/: CMakeLists.txt
刘利刚的课程作业/hw2——神经网络函数拟合数据/优秀代码/陈昱文/src/: CMakeLists.txt  RbfNetwork.cpp  RbfNetwork.h  main.cpp
刘利刚的课程作业/hw4——三次样条函数/优秀代码/向宇骋/src/: CanvasData.h  CanvasSystem.cpp
刘利刚的课程作业/hw4——三次样条函数/优秀代码/王宸/16_王宸_HW4/Components/details/: CanvasData_AutoRefl.inl
刘利刚的课程作业/hw4——三次样条函数/优秀代码/王宸/16_王宸_HW4/Systems/: CanvasSystem.cpp
刘利刚的课程作业/hw4——三次样条函数/优秀代码/马玺凯/assets/shaders/: DeferLighting.hlsl  Irradiance.hlsl  PreFilter.hlsl
刘利刚的课程作业/hw4——三次样条函数/优秀代码/马玺凯/src/hw1/: main.cpp
刘利刚的课程作业/hw4——三次样条函数/优秀代码/马玺凯/src/hw1/Components/: CanvasData.h
刘利刚的课程作业/hw4——三次样条函数/优秀代码/马玺凯/src/hw1/Components/details/: CanvasData_AutoRefl.inl
刘利刚的课程作业/hw4——三次样条函数/优秀代码/马玺凯/src/hw1/Systems/: CanvasSystem.cpp
刘利刚的课程作业/hw4——三次样条函数/优秀报告/陈昱文/: report.md
刘利刚的课程作业/hw8——Voronoi剖分、CVT、Lloyd 算法/优秀代码/向宇骋/src/: CanvasSystem.cpp
刘利刚的课程作业/hw8——Voronoi剖分、CVT、Lloyd 算法/优秀代码/王宸/16_王宸_HW8/: CanvasData.h  CanvasSystem.cpp
刘利刚的课程作业/hw8——Voronoi剖分、CVT、Lloyd 算法/优秀报告/谢聪/: hw8.md
刘利刚的课程作业/hw9——实现网格简化的 QEM 方法/优秀代码/GuoqingZhang/: 代码链接.txt
